plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.1'
	id 'io.spring.dependency-management' version '1.1.7'
	// ADR-0015: the platform-admin surface is server-rendered JTE inside this
	// application. Templates are *precompiled* into Java sources at build time
	// rather than resolved from disk at runtime, so the deployed jar carries no
	// template directory and a template that does not compile fails the build
	// instead of the first request that renders it.
	id 'gg.jte.gradle' version '3.2.4'
}

group = 'com.workin'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

// Phase 2 assets: the ETL/reconciliation suite that proves the
// PostgreSQL target schema and load program. Frozen, not deleted
// (strategy reset, 2026-08-16) -- kept compiling and runnable on
// demand so it cannot rot, but deliberately NOT wired into `check`,
// so ETL work can never gate a Phase 1 build.
//
// Declared before `configurations` because a source set creates its own
// implementation/runtimeOnly configurations; the block below extends
// those, it does not create them.
configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	testcontainersVersion = "2.0.5"
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	// Reads the meters the application already emits. Actuator alone registers
	// them and exposes nothing, so every counter and summary in the codebase --
	// device ingestion's stored/duplicate/rejected, the per-device clock skew --
	// was being maintained and then discarded. This is also what supplies JVM
	// heap, GC, thread and Hikari pool figures without any code.
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	// ADR-0015 prerequisite 11. The application is otherwise entirely
	// SessionCreationPolicy.STATELESS; the admin UI is the first surface that
	// needs a server-side session, and an in-memory one breaks under the
	// multi-worker deployment prerequisite 3 already assumes -- the same cookie
	// authenticates on one worker and is anonymous on the next, and logout
	// cannot invalidate a session living in another worker's heap. JDBC on the
	// existing datasource needs no new infrastructure.
	implementation 'org.springframework.boot:spring-boot-starter-session-jdbc'
	// The published API description. springdoc 3.x is the line that targets
	// Spring Boot 4, so this pairing is a supported one -- 2.8.6 before it was
	// not, and that note said the next Boot upgrade was where an unsupported
	// pairing would break. Held to the same bar it set: verified by running it
	// rather than assumed, on Boot 4.1.1, where the application starts, serves
	// /v3/api-docs as OpenAPI 3.1.0 with all 202 paths, and renders the UI.
	// Still pinned exactly, for the same reason.
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.1.1'
	implementation 'gg.jte:jte-spring-boot-starter-4:3.2.4'
	implementation 'gg.jte:jte:3.2.4'
	implementation 'io.micrometer:micrometer-tracing-bridge-otel'
	implementation 'io.opentelemetry:opentelemetry-exporter-logging'

	implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

	// D-097. The legacy attendance import accepts Excel 97-2003 `.xls`, which
	// is BIFF8 -- a binary OLE2 format with no JDK reader. POI HSSF is the
	// structural parser for exactly that surface and nothing else:
	// LegacySimpleXlsReader renders the values, LegacyXlsxReader and
	// LegacyCsvReader remain authoritative for XLSX and CSV, and neither is
	// refactored onto POI. `poi` only -- `poi-ooxml` is deliberately NOT a
	// dependency, because the XLSX path is already ported.
	implementation 'org.apache.poi:poi:5.5.1'

	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	// Boot 4 moved TestRestTemplate out of spring-boot-test into its own
	// module -- not pulled in transitively by the starters above.
	// spring-boot-restclient (RestTemplateBuilder) is resttestclient's
	// own dependency but isn't pulled in transitively either -- both are
	// needed explicitly.
	testImplementation 'org.springframework.boot:spring-boot-resttestclient'
	testImplementation 'org.springframework.boot:spring-boot-restclient'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
	// ADR-0007's adopted testing stack (JUnit 5 + Testcontainers +
	// ArchUnit + REST Assured) -- ArchUnit is scaffolded here per that
	// ADR's "adopt as part of first-module scaffolding" instruction,
	// ahead of F-23 (the architecture test it will enforce), which needs
	// more of the authorization framework built out first. Not yet
	// exercised by a test in this slice -- tracked, not silently dropped.
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.5.0'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Phase 1 substrate. MariaDB, not MySQL: production is MariaDB
	// 11.8.8 (D-037, verified read-only against the live host), and the
	// legacy schema uses MariaDB-tolerated syntax MySQL 8 warns on --
	// `int(10) UNSIGNED` display widths among it. Testing against the
	// engine production actually runs is the whole point of Phase 1.
	//
	// The application's only database (ADR-0017). runtimeOnly, not
	// testImplementation: LegacyPersistenceConfig is production code.
	testImplementation 'org.testcontainers:testcontainers-mariadb'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

	// Phase 2 suite only. These are the dependencies Phase 1 removes
	// from the application; the migration suite keeps them here so the
	// frozen work stays executable without holding `main` on Postgres.
}

dependencyManagement {
	imports {
		mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
	// Never restored from the build cache. The suite starts a MariaDB
	// container, and neither the Docker daemon's state nor the floating
	// `mariadb:11.8` image is an input Gradle can see -- so a run whose
	// inputs matched an earlier one could be "passed" by copying that run's
	// XML without starting a database. Compilation stays cacheable, which is
	// where the cache's time goes.
	outputs.cacheIf { false }
	// Files outside backend/ that tests read. Undeclared, an edit to one of them alone
	// leaves this task UP-TO-DATE, so the test that guards it never runs. Each is also a
	// path that starts .github/workflows/backend-validate.yml, and
	// BackendTestRepositoryInputsTest holds the tests, these inputs and those paths together.
	inputs.files(
			'../deploy/e2e/playwright.config.js',
			'../deploy/e2e/README.md',
			'../contracts/legacy-dashboard-pages.txt',
			'../docs/operations/provisioning-phase1-tables.md',
			'../.github/workflows/backend-validate.yml')
		.withPropertyName('repositoryFilesReadByTests')
		.withPathSensitivity(PathSensitivity.RELATIVE)
	inputs.dir('../deploy/e2e/tests')
		.withPropertyName('e2eSpecsReadByTests')
		.withPathSensitivity(PathSensitivity.RELATIVE)
	// Without this Gradle prints only "AssertionFailedError at Foo.java:12"
	// and swallows the message, which on CI -- the only place the
	// Testcontainers suite can run -- means a failure gives you a line
	// number and nothing to act on.
	testLogging {
		exceptionFormat = 'full'
		showExceptions = true
		showCauses = true
		showStackTraces = true
	}
	// The suite has grown past 1500 tests across many `@SpringBootTest`
	// classes, each caching its own Spring `ApplicationContext` (and, for
	// the Phase 1 legacy classes, its own `MariaDBContainer`) for the life
	// of the single worker JVM Gradle's default (unset) settings give it.
	// Nothing frees those contexts between classes, so the accumulated
	// class loaders, JDBC driver state and Testcontainers/Ryuk bookkeeping
	// eventually exhaust the JVM's default heap -- observed on CI as
	// `OutOfMemoryError: Java heap space` failing unrelated test classes
	// partway through an otherwise-passing run. `forkEvery` periodically
	// restarts the worker so accumulated context state is actually
	// released rather than merely garbage-collectable, which is the real
	// fix; the heap bump is a modest safety margin for the classes that
	// run before the first restart, not the primary mechanism.
	//
	// This repository is private on the GitHub Free plan (D-013), so
	// `ubuntu-24.04` here is the **standard** private-repo runner --
	// 2 vCPU / 7GB RAM, not the 16GB spec public repositories get. The
	// Gradle daemon (a separate JVM), the Docker daemon, Ryuk and any
	// MariaDB/PostgreSQL containers still alive within a fork's 25 classes
	// all draw from that same 7GB, so both numbers stay conservative
	// rather than sized as if this were a larger runner.
	maxHeapSize = '2g'
	forkEvery = 25
	// This sandbox's Docker daemon (29.7.1, API 1.55) rejects the old,
	// hardcoded low API-version ping some Testcontainers releases use by
	// default -- proven root cause during the H2 spike (see
	// docs/migration/technical-spike-plan.md's "Full Spike Findings").
	// Testcontainers 2.x's ping mechanism is fixed; these env vars are
	// kept as a documented, harmless belt-and-braces match to the spike's
	// proven-working configuration for this specific environment.
	environment 'DOCKER_HOST', 'unix:///var/run/docker.sock'
	environment 'DOCKER_API_VERSION', '1.55'
}


// Precompile the JTE templates. `generate()` emits Java sources into the normal
// compile path, so template errors are build errors and the runtime needs no
// template files present.
jte {
	generate()
	binaryStaticContent = true
}

// `bootTestRun` starts the real application on the test runtime classpath. It
// has to be told which main class: test sources contain other `main` methods
// (the legacy spreadsheet fixture generator among them) and the plugin
// otherwise picks one arbitrarily.
//
// This is how the application is started for manual runtime verification,
// because it cannot currently be started from the jar at all: BackendApplication
// excludes DataSourceAutoConfiguration, so nothing supplies JdbcConnectionDetails
// outside Testcontainers. See LiveVerifyDataSourceConfig, and treat that as a
// deployment gap to close in the cutover work rather than a fix.
tasks.named('bootTestRun') {
	mainClass = 'com.workin.backend.BackendApplication'
}
